--- a/Inicio.html
+++ b/Inicio.html
@@ -9,8 +9,8 @@
 <body>
     
     <h1>Encabezado </h1>
-    <h6>Encbezado chiquito</h6>
-    
+    <h6>Encabezado chiquito</h6>
+
 
 </body>
 </html>
